--- a/template/index.html
+++ b/template/index.html
@@ -5,82 +5,89 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>{{title}}</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-        {% if description %}
-        <meta name="description" content="{{ description }}">
-        {% endif %}
-        <link rel="stylesheet" href="/assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="/assets/css/noscript.css" /></noscript>
 
-	</head>
-	<body class="is-preload">
+<head>
+	<title>{{title}}</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	{% if description %}
+	<meta name="description" content="{{ description }}">
+	{% endif %}
+	<link rel="stylesheet" href="/assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="/assets/css/noscript.css" />
+	</noscript>
 
-		<!-- Wrapper -->
-			<div id="wrapper" class="main-wrapper">
+</head>
 
-				<!-- Header -->
-					<header id="header">
-						
-                        <h1>
-                            {% if author %}
-                            <a href="/"><strong>{{author}}</strong></a>
-                            {% else %}
-                            <a href="/"><strong><i class="fa fa-home"></i></strong></a>
-                            {% endif %}
-                            {% if breadcrumbs %}
-                                {% for item in breadcrumbs %}
-                                    {% if item.current %}
-                                    <a href="javascript:;" class="breadcrumbs-current"><strong>/ {{item.title}}</strong></a>
-                                    {% else %}
-                                    <a href="{{item.path}}"><strong>/ {{item.title}}</strong></a>
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
-                        </h1>
-						
-						<nav>
-							<ul>
-								<li><a href="http://idinr.com" class="icon solid fa-info-circle">About Me</a></li>
-							</ul>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Main -->
-					<div id="main">
-						{% if children %}
-							{% for item in children %}
-							<article class="thumb">
-								{% if item.category == "album" %}
-									<a href="{{item.path}}" class="link">
-										<img src="{{item.url}}" alt="" />
-									</a>
-								{% else %}
-									<a href="{{item.url}}" class="image">
-										<img src="{{item.url}}" alt="" />
-									</a>
-								{% endif %}
-								{% if item.title %}
-									<h2>
-										{% if item.category == "album" %}
-											<img class="icon-album" src="http://s2.idinr.com/fdf.png"/>
-										{% endif %}
-										{{item.title}}
-									</h2>
-								{% endif %}
-								{% if item.description %}
-									<p>{{item.description}}</p>
-								{% endif %}
-								
-							</article>
-							{% endfor %}
-						{% endif %}
-					</div>
+	<!-- Wrapper -->
+	<div id="wrapper" class="main-wrapper">
 
-				<!-- Footer -->
-					<!-- <footer id="footer" class="panel">
+		<!-- Header -->
+		<header id="header">
+
+			<h1>
+				{% if author %}
+				<a href="/"><strong>{{author}}</strong></a>
+				{% else %}
+				<a href="/"><strong><i class="fa fa-home"></i></strong></a>
+				{% endif %}
+				{% if breadcrumbs %}
+				{% for item in breadcrumbs %}
+				{% if item.current %}
+				<a href="javascript:;" class="breadcrumbs-current"><strong>/ {{item.title}}</strong></a>
+				{% else %}
+				<a href="{{item.path}}"><strong>/ {{item.title}}</strong></a>
+				{% endif %}
+				{% endfor %}
+				{% endif %}
+			</h1>
+
+			<nav>
+				<ul>
+					<li><a href="https://www.wuyiting.cn" class="icon solid fa-info-circle">About Me</a></li>
+				</ul>
+			</nav>
+		</header>
+
+		<!-- Main -->
+		<div id="main">
+			{% if children %}
+			{% for item in children %}
+			<article class="thumb">
+				{% if item.category == "album" %}
+				<a href="{{item.path}}" class="link">
+					<img src="{{item.url}}" alt="" />
+				</a>
+				{% else %}
+				<a href="{{item.url}}" class="image">
+					<img src="{{item.url}}" alt="" />
+				</a>
+				{% endif %}
+				{% if item.title %}
+				<h2>
+					{% if item.category == "album" %}
+					<img class="icon-album" src="http://s2.idinr.com/fdf.png" />
+					{% endif %}
+					{{item.title}}
+				</h2>
+				{% endif %}
+				{% if item.description %}
+				<p>{{item.description}}</p>
+				{% endif %}
+				{% if item.date %}
+				<p>{{item.date}}</p>
+				{% endif %}
+
+			</article>
+			{% endfor %}
+			{% endif %}
+		</div>
+
+		<!-- Footer -->
+		<!-- <footer id="footer" class="panel">
 						<div class="inner split">
 							<div>
 								<section>
@@ -127,15 +134,16 @@
 						</div>
 					</footer> -->
 
-			</div>
+	</div>
 
-		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/jquery.poptrox.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="/assets/js/jquery.min.js"></script>
+	<script src="/assets/js/jquery.poptrox.min.js"></script>
+	<script src="/assets/js/browser.min.js"></script>
+	<script src="/assets/js/breakpoints.min.js"></script>
+	<script src="/assets/js/util.js"></script>
+	<script src="/assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
