--- a/template/index.html
+++ b/template/index.html
@@ -69,7 +69,7 @@
 				{% if item.title %}
 				<h2>
 					{% if item.category == "album" %}
-					<img class="icon-album" src="http://s2.idinr.com/fdf.png" />
+					<img class="icon-album" src="https://photo.wuyiting.cn/fdf.png" />
 					{% endif %}
 					{{item.title}}
 				</h2>
