--- a/template/index.html
+++ b/template/index.html
@@ -53,7 +53,7 @@
 
 			<nav>
 				<ul>
-					<li><a href="https://www.wuyiting.cn" class="icon solid fa-info-circle">About Me</a></li>
+					<li><a href="http://150.158.130.69:9999/" class="icon solid fa-info-circle">About Me</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -74,9 +74,6 @@
 				{% endif %}
 				{% if item.title %}
 				<h2>
-					{% if item.category == "album" %}
-					<img class="icon-album" src="https://photo.wuyiting.cn/fdf.png" />
-					{% endif %}
 					{{item.title}}
 				</h2>
 				{% endif %}
